Add redis service

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,9 @@ pipeline:
       event: push
 
 services:
+  
+  redis:
+    image: redis
   dind:
     image: docker:1.11-dind
     privileged: true
