Add redis to Drone build

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,9 @@ pipeline:
       event: push
 
 services:
+  a-redis-service:
+    image: redis
+  
   dind:
     image: docker:1.11-dind
     privileged: true
